# nanorpc

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/nanorpc/: Cargo.toml
crates/nanorpc-wire/: Cargo.toml
crates/nanorpc-wire/src/: lib.rs
crates/nanorpc/src/: client.rs  lib.rs  limit.rs  server.rs
docs/: protocol.md
interop/: Cargo.toml  build.rs
interop/schema/: echo.nb
interop/src/: lib.rs
interop/tests/: loopback.rs
runtimes/python/: nanorpc.py  run_tests.sh
runtimes/python/tests/: test_interop.py
scripts/: test-all.sh
